<?xml version="1.0"?>
<package>
  <name>open_karto</name>
  <version>1.1.1</version>
  <description>Release-package for OpenKarto</description>

  <maintainer email="swirth@willowgarage.com">Stephan Wirth</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>

  <run_depend>boost</run_depend>

</package>
